--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,7 @@ body {
     justify-content: space-around;
     list-style-type: none;
 }
+#main-content-wrapper {
+    background-color: darkseagreen;
+    width: 80%
+}
