--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     background-color: beige;
 }
 
+#header > hi {
+    margin: 0;
+}
+
 #nav {
     width:100%; 
     background-color:aqua;
@@ -17,9 +21,27 @@ body {
     background-color: aliceblue;
     justify-content: space-around;
     list-style-type: none;
+    margin:0;
+}
+
+#middle-wrapper {
+     display: flex;
 }
 
 #main-content-wrapper {
     background-color: yellowgreen;
     width: 80%;
+}
+#aside-content-wrapper {
+    background-color: plum;
+    width: 20%
+}
+
+footer { 
+    background-color: coral;
+    margin: 0;
+}
+
+footer > h1 {
+    margin: 0;
 }
